Fix horizontal scrolling on mobile devices

--- a/app/common.app.css
+++ b/app/common.app.css
@@ -11,6 +11,11 @@
     font-size:1.5em;
 }
 
+.overflow-wrapper {
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+}
+
 @media all and (max-width: 660px) {
     .header-bottom a.action-button, .toolbar a.action-button {
         display:block;
@@ -28,6 +33,7 @@
     padding:0 .5em .5em .5em;
     background:#fff;
     border-bottom:3px solid #333;
+    z-index: 1000;
 }
 
 @media all and (max-width: 1024px) {
